--- a/.github/workflows/python-package-conda.yml
+++ b/.github/workflows/python-package-conda.yml
@@ -17,5 +17,6 @@ jobs:
     - name: Add conda to system path
       run: |
         export CC=gcc
+        pip install numpy
         python setup.py build
         python setup.py install --user
